welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: unclosed character literal
  case (5,false) => return '10:00'
                           ^alarmClock:4: error: Non-zero integral values may not have a leading zero.
  case (5,false) => return '10:00'
                               ^alarmClock:4: error: unclosed character literal
  case (5,false) => return '10:00'
                                 ^alarmClock:5: error: unclosed character literal
  case (6,false) => return '10:00'
                           ^alarmClock:5: error: Non-zero integral values may not have a leading zero.
  case (6,false) => return '10:00'
                               ^alarmClock:5: error: unclosed character literal
  case (6,false) => return '10:00'
                                 ^alarmClock:-6: error: Missing closing brace `}' assumed here
try {
^alarmClock:1: error: expected class or object definition
def alarmClock(day:Int, vacation:Boolean): String = {
^alarmClock:4: error: unclosed character literal
  case (5,false) => return '10:00'
                           ^alarmClock:4: error: Non-zero integral values may not have a leading zero.
  case (5,false) => return '10:00'
                               ^alarmClock:4: error: unclosed character literal
  case (5,false) => return '10:00'
                                 ^alarmClock:5: error: unclosed character literal
  case (6,false) => return '10:00'
                           ^alarmClock:5: error: Non-zero integral values may not have a leading zero.
  case (6,false) => return '10:00'
                               ^alarmClock:5: error: unclosed character literal
  case (6,false) => return '10:00'
                                 ^